New Crowdin updates
New translations strings.xml (Romanian)
New translations strings.xml (French)
New translations strings.xml (Spanish)
New translations strings.xml (Arabic)
New translations strings.xml (German)
New translations strings.xml (Greek)
New translations strings.xml (Finnish)
New translations strings.xml (Hungarian)
New translations strings.xml (Italian)
New translations strings.xml (Japanese)
New translations strings.xml (Korean)
New translations strings.xml (Dutch)
New translations strings.xml (Punjabi)
New translations strings.xml (Polish)
New translations strings.xml (Portuguese)
New translations strings.xml (Russian)
New translations strings.xml (Turkish)
New translations strings.xml (Ukrainian)
New translations strings.xml (Chinese Simplified)
New translations strings.xml (Chinese Traditional)
New translations strings.xml (Vietnamese)
New translations strings.xml (Portuguese, Brazilian)
New translations strings.xml (Indonesian)
New translations strings.xml (Persian)
New translations strings.xml (Marathi)
New translations strings.xml (Thai)
New translations strings.xml (Hindi)
New translations strings.xml (Malay)
New translations strings.xml (Burmese)
New translations strings.xml (Serbian (Latin))

--- a/app-games/src/main/res/values-fa-rIR/strings.xml
+++ b/app-games/src/main/res/values-fa-rIR/strings.xml
@@ -96,7 +96,7 @@
   <string name="waiting_for_connection">در انتظار اتصال</string>
   <string name="wait_for_wifi_button">در انتظار وایفای</string>
   <string name="continue_button">ادامه</string>
-  <string name="error_install_permissions_body">For your security, your phone currently isn\'t allowed to install apps from this source. You can change this in Settings.</string>
+  <string name="error_install_permissions_body"><![CDATA[Please go to Settings and grant <1>Aptoide Games</1> permissions to install apps!]]></string>
   <!-- Out of Space -->
   <string name="out_of_space_title">حافظه‌ پر است</string>
   <string name="out_of_space_body">برای ادامه نصب به %s نیاز دارید.</string>
@@ -135,8 +135,11 @@
   <string name="appview_info_permissions_title" comment="permissions">الأذونات</string>
   <string name="download_percentage_body" comment="1_s_of_2_s">%1$s%% از %2$s</string>
   <string name="error_short_title" comment="oops_an_error_occurred">با عرض پوزش، خطایی رخ داده است</string>
-  <string name="purchase_done_existing_bonus_body">اکنون %s در پاداش دارید. AppCoins Wallet را دانلود کنید تا آن را در خرید بعدی خود استفاده کنید.</string>
-  <string name="bonus_banner_body" comment="you_ll_get_a_bonus_in_all_games_identified_wit">در همه بازی‌هایی که با %s شناخته می‌شوند یک پاداش می‌گیرید.</string>
+  <string name="purchase_done_bonus_title">Get a %s bonus!</string>
+  <string name="purchase_done_bonus_body">Download the AppCoins Wallet to get this bonus and use it in your next purchase.</string>
+  <string name="purchase_done_bonus_wallet_installed_title">AppCoins Wallet installed!</string>
+  <string name="purchase_done_bonus_wallet_installed_body">Open it to find your bonus.</string>
+  <string name="bonus_banner_body">در همه بازی‌هایی که با %s شناخته می‌شوند یک پاداش می‌گیرید.</string>
   <string name="bonus_banner_title" comment="up_to_s_bonus">تا %s%% پاداش</string>
   <string name="settings_payments_title" comment="contact_support_team">تماس با تیم پشتیبانی</string>
   <string name="settings_contact_support_body" comment="billing_terms_of_use">شرایط استفاده ار پرداخت</string>
@@ -157,7 +160,7 @@
   <string name="iap_card_expiry" comment="expiry_date">تاریخ انقضا</string>
   <string name="iap_card_cvc" comment="cvc_cvv">CVC/CVV</string>
   <string name="iab_change_card_button" comment="change_card">تغییر کارت</string>
-  <string name="done_title" comment="done">انجام شد!</string>
+  <string name="done_title">انجام شد!</string>
   <string name="purchase_making_purchase_title" comment="making_purchase">درحال انجام خرید...</string>
   <string name="manage_cards_error_details" comment="are_you_sure_your_card_details_are_correct_ple">آیا مطمئن هستید که اطلاعات کارت شما صحیح است؟ لطفا مجدد امتحان کنید!</string>
   <string name="log_out_button" comment="log_out">خروج</string>
@@ -194,4 +197,16 @@
   <string name="bonus_page_body_1">Look for the games identified with %1$s, install the AppCoins Wallet and get up to %2$s%% bonus in all purchases. You can then use this bonus to make your next purchases in your favorite games!</string>
   <string name="bonus_page_title_2">Want More?</string>
   <string name="bonus_page_body_2">You can get an extra %s%% bonus by using an Aptoide Games exclusive promo code in specific games. Stay tuned and you\'ll be notified!</string>
+  <!-- Promo Code -->
+  <string name="promo_code_install_wallet_banner_title">Up to %s%% Bonus in Every Purchase</string>
+  <string name="promo_code_install_wallet_banner_body">Use the AppCoins Wallet to make your in-app purchases and get a reward.</string>
+  <string name="promo_code_extra_title">Want More? Get %s%% Extra Bonus!</string>
+  <string name="promo_code_use_button">Use code</string>
+  <string name="promo_code_install_wallet_disclaimer">Install the AppCoins Wallet first.</string>
+  <string name="promo_code_notification_title">Redeem Your Promo Code</string>
+  <string name="promo_code_notification_body">Use your promo code to get extra bonuses in your favorite game.</string>
+  <string name="promo_code_notification_without_wallet_title">%s%% Extra Bonus!</string>
+  <string name="promo_code_notification_without_wallet_body">Get the AppCoins Wallet and use your promo code to get extra bonuses in all purchases.</string>
+  <string name="promo_code_share_title">You\'ve got a promo code!</string>
+  <string name="promo_code_share_body">Use this promo code to get extra bonuses in your favorite game.</string>
 </resources>
