--- a/app-games/src/main/res/values-in-rID/strings.xml
+++ b/app-games/src/main/res/values-in-rID/strings.xml
@@ -75,7 +75,7 @@
   <string name="button_back_title">Kembali</string>
   <string name="button_see_all_title">Lihat semua</string>
   <string name="editorials_view_no_content_message">Ups, belum ada konten di sini!</string>
-  <string name="error_no_content_body">Oops, we couldn\'t find related content yet!</string>
+  <string name="error_no_content_body">Ups, kami belum bisa menemukan konten terkait!</string>
   <string name="button_update_title">Perbarui</string>
   <string name="button_open_app_title">Buka</string>
   <string name="install_waiting_download_message">Menunggu unduhan</string>
@@ -85,18 +85,18 @@
   <string name="send_button">Kirim</string>
   <string name="try_again">Silakan coba lagi.</string>
   <string name="please_wait">Harap tunggu.</string>
-  <string name="ok_button">Ok</string>
-  <string name="cancel_button">Cancel</string>
+  <string name="ok_button">Oke</string>
+  <string name="cancel_button">Batal</string>
   <string name="download_now_button">Unduh Sekarang</string>
   <string name="uninstall_button">Copot pemasangan</string>
   <string name="go_back_button">Kembali</string>
-  <string name="go_back_to_game_button">Go Back to Game</string>
+  <string name="go_back_to_game_button">Kembali ke Game</string>
   <string name="uninstalling">Mencopot pemasangan</string>
   <string name="resume_button">Lanjutkan</string>
   <string name="waiting_for_connection">Menunggu koneksi</string>
   <string name="wait_for_wifi_button">Tunggu Wi-Fi</string>
   <string name="continue_button">Lanjutkan</string>
-  <string name="error_install_permissions_body">For your security, your phone currently isn\'t allowed to install apps from this source. You can change this in Settings.</string>
+  <string name="error_install_permissions_body"><![CDATA[Silakan buka Pengaturan dan berikan izin ke <1>Aptoide Games</1> untuk memasang aplikasi!]]></string>
   <!-- Out of Space -->
   <string name="out_of_space_title">Kehabisan Ruang Penyimpanan</string>
   <string name="out_of_space_body">Anda membutuhkan %s untuk melanjutkan instalasi.</string>
@@ -135,8 +135,11 @@
   <string name="appview_info_permissions_title" comment="permissions">Izin</string>
   <string name="download_percentage_body" comment="1_s_of_2_s">%1$s%% dari %2$s</string>
   <string name="error_short_title" comment="oops_an_error_occurred">Ups, terjadi kesalahan</string>
-  <string name="purchase_done_existing_bonus_body">Sekarang Anda memiliki bonus %s. Unduh Dompet AppCoins untuk menggunakannya di pembelian Anda berikutnya.</string>
-  <string name="bonus_banner_body" comment="you_ll_get_a_bonus_in_all_games_identified_wit">You\'ll get a bonus in all games identified with %s.</string>
+  <string name="purchase_done_bonus_title">Dapatkan bonus %s!</string>
+  <string name="purchase_done_bonus_body">Download Dompet AppCoins untuk mendapatkan bonus ini dan gunakan pada pembelian Anda berikutnya.</string>
+  <string name="purchase_done_bonus_wallet_installed_title">Dompet AppCoins sudah diinstal!</string>
+  <string name="purchase_done_bonus_wallet_installed_body">Buka untuk menemukan bonus Anda.</string>
+  <string name="bonus_banner_body">Anda akan mendapatkan bonus di semua game yang teridentifikasi dengan %s.</string>
   <string name="bonus_banner_title" comment="up_to_s_bonus">Bonus Hingga %s%%</string>
   <string name="settings_payments_title" comment="contact_support_team">Hubungi Tim Dukungan</string>
   <string name="settings_contact_support_body" comment="billing_terms_of_use">Ketentuan Penggunaan Penagihan</string>
@@ -157,7 +160,7 @@
   <string name="iap_card_expiry" comment="expiry_date">Tanggal kedaluwarsa</string>
   <string name="iap_card_cvc" comment="cvc_cvv">CVC/CVV</string>
   <string name="iab_change_card_button" comment="change_card">Ganti kartu</string>
-  <string name="done_title" comment="done">Selesai!</string>
+  <string name="done_title">Selesai!</string>
   <string name="purchase_making_purchase_title" comment="making_purchase">Melakukan Pembelian...</string>
   <string name="manage_cards_error_details" comment="are_you_sure_your_card_details_are_correct_ple">Apakah Anda yakin rincian kartu Anda sudah benar? Silakan coba lagi!</string>
   <string name="log_out_button" comment="log_out">Keluar</string>
@@ -187,11 +190,23 @@
   <string name="purchase_error_in_progress_title">Permintaan Anda sudah diproses atau sedang dijalankan.</string>
   <string name="purchase_card_error_CVV_title">CVV/CVC salah</string>
   <string name="purchase_error_expired_card_title">Tampaknya kartu Anda sudah kedaluwarsa.</string>
-  <string name="iap_already_processing_title">It seems this purchase is already being processed.</string>
-  <string name="iap_already_processing_body">This purchase may take a while, so, please hold on until completed or contact our Support Team.</string>
+  <string name="iap_already_processing_title">Sepertinya pembelian ini sudah diproses.</string>
+  <string name="iap_already_processing_body">Pembelian ini mungkin memakan waktu cukup lama, jadi silakan tunggu sampai selesai atau hubungi Tim Dukungan kami.</string>
   <!-- Bonus Page -->
-  <string name="bonus_page_title_1">A Bonus on Every Purchase</string>
-  <string name="bonus_page_body_1">Look for the games identified with %1$s, install the AppCoins Wallet and get up to %2$s%% bonus in all purchases. You can then use this bonus to make your next purchases in your favorite games!</string>
-  <string name="bonus_page_title_2">Want More?</string>
-  <string name="bonus_page_body_2">You can get an extra %s%% bonus by using an Aptoide Games exclusive promo code in specific games. Stay tuned and you\'ll be notified!</string>
+  <string name="bonus_page_title_1">Bonus di Setiap Pembelian</string>
+  <string name="bonus_page_body_1">Cari game yang diidentifikasi dengan %1$s, instal Dompet AppCoins dan dapatkan bonus hingga %2$s%% di semua pembelian. Selanjutnya Anda bisa menggunakan bonus ini untuk melakukan pembelian berikutnya di game favorit Anda!</string>
+  <string name="bonus_page_title_2">Ingin Lebih?</string>
+  <string name="bonus_page_body_2">Anda bisa mendapatkan bonus tambahan %s%% dengan menggunakan kode promo eksklusif Aptoide Games di game tertentu. Tunggu info selanjutnya, nanti Anda akan diberi tahu!</string>
+  <!-- Promo Code -->
+  <string name="promo_code_install_wallet_banner_title">Bonus Hingga %s%% di Setiap Pembelian</string>
+  <string name="promo_code_install_wallet_banner_body">Gunakan Dompet AppCoins untuk melakukan pembelian dalam aplikasi dan mendapatkan hadiah.</string>
+  <string name="promo_code_extra_title">Ingin Lebih? Dapatkan Bonus Tambahan %s%%!</string>
+  <string name="promo_code_use_button">Gunakan kode</string>
+  <string name="promo_code_install_wallet_disclaimer">Instal Dompet AppCoins dulu.</string>
+  <string name="promo_code_notification_title">Tebus Kode Promo Anda</string>
+  <string name="promo_code_notification_body">Gunakan kode promo Anda untuk mendapatkan bonus tambahan di game favorit Anda.</string>
+  <string name="promo_code_notification_without_wallet_title">Bonus Tambahan %s%%!</string>
+  <string name="promo_code_notification_without_wallet_body">Dapatkan Dompet AppCoins dan gunakan kode promo Anda untuk mendapatkan bonus tambahan di semua pembelian.</string>
+  <string name="promo_code_share_title">Anda punya kode promo!</string>
+  <string name="promo_code_share_body">Gunakan kode promo ini untuk mendapatkan bonus tambahan di game favorit Anda.</string>
 </resources>
