--- a/app-games/src/main/res/values-de-rDE/strings.xml
+++ b/app-games/src/main/res/values-de-rDE/strings.xml
@@ -75,7 +75,7 @@
   <string name="button_back_title">Zurück</string>
   <string name="button_see_all_title">Alle anzeigen</string>
   <string name="editorials_view_no_content_message">Hoppla, hier gibt es noch keinen Inhalt!</string>
-  <string name="error_no_content_body">Oops, we couldn\'t find related content yet!</string>
+  <string name="error_no_content_body">Ups, wir konnten noch keine verwandten Inhalte finden!</string>
   <string name="button_update_title">Aktualisieren</string>
   <string name="button_open_app_title">Öffnen</string>
   <string name="install_waiting_download_message">Warten auf den Download</string>
@@ -86,17 +86,17 @@
   <string name="try_again">Bitte versuche es noch einmal.</string>
   <string name="please_wait">Bitte warten.</string>
   <string name="ok_button">Ok</string>
-  <string name="cancel_button">Cancel</string>
+  <string name="cancel_button">Abbrechen</string>
   <string name="download_now_button">Jetzt herunterladen</string>
   <string name="uninstall_button">Deinstallieren</string>
   <string name="go_back_button">Zurück</string>
-  <string name="go_back_to_game_button">Go Back to Game</string>
+  <string name="go_back_to_game_button">Zurück zum Spiel</string>
   <string name="uninstalling">Deinstallation</string>
   <string name="resume_button">Zusammenfassung</string>
   <string name="waiting_for_connection">Warten auf Verbindung</string>
   <string name="wait_for_wifi_button">Warten auf WLAN</string>
   <string name="continue_button">Fortfahren</string>
-  <string name="error_install_permissions_body">For your security, your phone currently isn\'t allowed to install apps from this source. You can change this in Settings.</string>
+  <string name="error_install_permissions_body"><![CDATA[Please go to Settings and grant <1>Aptoide Games</1> permissions to install apps!]]></string>
   <!-- Out of Space -->
   <string name="out_of_space_title">Kein Speicher mehr</string>
   <string name="out_of_space_body">Sie benötigen %s um die Installation abschliessen zu können.</string>
@@ -135,8 +135,11 @@
   <string name="appview_info_permissions_title" comment="permissions">Genehmigungen</string>
   <string name="download_percentage_body" comment="1_s_of_2_s">%1$s%% von %2$s</string>
   <string name="error_short_title" comment="oops_an_error_occurred">Hoppla, ein Fehler ist aufgetreten</string>
-  <string name="purchase_done_existing_bonus_body">Du hast jetzt %s an Bonus. Lade die AppCoins Wallet herunter, um den Bonus bei deinem nächsten Einkauf zu verwenden.</string>
-  <string name="bonus_banner_body" comment="you_ll_get_a_bonus_in_all_games_identified_wit">Du bekommst einen Bonus in allen Spielen, die mit %s gekennzeichnet sind.</string>
+  <string name="purchase_done_bonus_title">Get a %s bonus!</string>
+  <string name="purchase_done_bonus_body">Download the AppCoins Wallet to get this bonus and use it in your next purchase.</string>
+  <string name="purchase_done_bonus_wallet_installed_title">AppCoins Wallet installed!</string>
+  <string name="purchase_done_bonus_wallet_installed_body">Open it to find your bonus.</string>
+  <string name="bonus_banner_body">Du bekommst einen Bonus in allen Spielen, die mit %s gekennzeichnet sind.</string>
   <string name="bonus_banner_title" comment="up_to_s_bonus">Bis zu %s%% Bonus</string>
   <string name="settings_payments_title" comment="contact_support_team">Support-Team kontaktieren</string>
   <string name="settings_contact_support_body" comment="billing_terms_of_use">Nutzungsbedingungen für die Verrechnung</string>
@@ -157,7 +160,7 @@
   <string name="iap_card_expiry" comment="expiry_date">Ablaufdatum</string>
   <string name="iap_card_cvc" comment="cvc_cvv">CVC/CVV</string>
   <string name="iab_change_card_button" comment="change_card">Karte ändern</string>
-  <string name="done_title" comment="done">Erledigt!</string>
+  <string name="done_title">Erledigt!</string>
   <string name="purchase_making_purchase_title" comment="making_purchase">Kauf wird getätigt...</string>
   <string name="manage_cards_error_details" comment="are_you_sure_your_card_details_are_correct_ple">Bist du sicher, dass deine Kartendaten korrekt sind? Bitte versuche es noch einmal!</string>
   <string name="log_out_button" comment="log_out">Abmelden</string>
@@ -187,11 +190,23 @@
   <string name="purchase_error_in_progress_title">Deine Anfrage wurde bereits bearbeitet oder ist in Bearbeitung.</string>
   <string name="purchase_card_error_CVV_title">Falscher CVV/CVC</string>
   <string name="purchase_error_expired_card_title">Deine Karte scheint abgelaufen zu sein.</string>
-  <string name="iap_already_processing_title">It seems this purchase is already being processed.</string>
-  <string name="iap_already_processing_body">This purchase may take a while, so, please hold on until completed or contact our Support Team.</string>
+  <string name="iap_already_processing_title">Es scheint, als würde dieser Kauf bereits bearbeitet werden.</string>
+  <string name="iap_already_processing_body">Dieser Kauf kann eine Weile dauern, bitte habe Geduld, bis er abgeschlossen ist, oder wende dich an unser Support-Team.</string>
   <!-- Bonus Page -->
-  <string name="bonus_page_title_1">A Bonus on Every Purchase</string>
-  <string name="bonus_page_body_1">Look for the games identified with %1$s, install the AppCoins Wallet and get up to %2$s%% bonus in all purchases. You can then use this bonus to make your next purchases in your favorite games!</string>
-  <string name="bonus_page_title_2">Want More?</string>
-  <string name="bonus_page_body_2">You can get an extra %s%% bonus by using an Aptoide Games exclusive promo code in specific games. Stay tuned and you\'ll be notified!</string>
+  <string name="bonus_page_title_1">Ein Bonus für jeden Einkauf</string>
+  <string name="bonus_page_body_1">Halte Ausschau nach den mit %1$s gekennzeichneten Spielen, installiere die AppCoins Wallet und erhalte einen Bonus von bis zu %2$s%% für alle Einkäufe. Diesen Bonus kannst du dann für deine nächsten Einkäufe in deinen Lieblingsspielen verwenden!</string>
+  <string name="bonus_page_title_2">Willst du mehr?</string>
+  <string name="bonus_page_body_2">Du kannst einen zusätzlichen %s%% Bonus erhalten, indem du einen exklusiven Aptoide Games Promocode in bestimmten Spielen verwendest. Bleib dran und du wirst benachrichtigt!</string>
+  <!-- Promo Code -->
+  <string name="promo_code_install_wallet_banner_title">Up to %s%% Bonus in Every Purchase</string>
+  <string name="promo_code_install_wallet_banner_body">Use the AppCoins Wallet to make your in-app purchases and get a reward.</string>
+  <string name="promo_code_extra_title">Want More? Get %s%% Extra Bonus!</string>
+  <string name="promo_code_use_button">Use code</string>
+  <string name="promo_code_install_wallet_disclaimer">Install the AppCoins Wallet first.</string>
+  <string name="promo_code_notification_title">Redeem Your Promo Code</string>
+  <string name="promo_code_notification_body">Use your promo code to get extra bonuses in your favorite game.</string>
+  <string name="promo_code_notification_without_wallet_title">%s%% Extra Bonus!</string>
+  <string name="promo_code_notification_without_wallet_body">Get the AppCoins Wallet and use your promo code to get extra bonuses in all purchases.</string>
+  <string name="promo_code_share_title">You\'ve got a promo code!</string>
+  <string name="promo_code_share_body">Use this promo code to get extra bonuses in your favorite game.</string>
 </resources>
