--- a/app-games/src/main/res/values-nl-rNL/strings.xml
+++ b/app-games/src/main/res/values-nl-rNL/strings.xml
@@ -75,7 +75,7 @@
   <string name="button_back_title">Terug</string>
   <string name="button_see_all_title">Alles tonen</string>
   <string name="editorials_view_no_content_message">Oeps, er is hier nog geen content!</string>
-  <string name="error_no_content_body">Oops, we couldn\'t find related content yet!</string>
+  <string name="error_no_content_body">Oeps, we kunnen nog geen gerelateerde content vinden!</string>
   <string name="button_update_title">Bijwerken</string>
   <string name="button_open_app_title">Openen</string>
   <string name="install_waiting_download_message">Wachten op download</string>
@@ -85,18 +85,18 @@
   <string name="send_button">Sturen</string>
   <string name="try_again">Probeer het opnieuw.</string>
   <string name="please_wait">Even geduld.</string>
-  <string name="ok_button">Ok</string>
-  <string name="cancel_button">Cancel</string>
+  <string name="ok_button">OK</string>
+  <string name="cancel_button">Annuleren</string>
   <string name="download_now_button">Nu downloaden</string>
   <string name="uninstall_button">Verwijderen</string>
   <string name="go_back_button">Terug</string>
-  <string name="go_back_to_game_button">Go Back to Game</string>
+  <string name="go_back_to_game_button">Ga terug naar de game</string>
   <string name="uninstalling">Verwijderen</string>
   <string name="resume_button">Hervatten</string>
   <string name="waiting_for_connection">Wachten op verbinding</string>
   <string name="wait_for_wifi_button">Wachten op wifi</string>
   <string name="continue_button">Doorgaan</string>
-  <string name="error_install_permissions_body">For your security, your phone currently isn\'t allowed to install apps from this source. You can change this in Settings.</string>
+  <string name="error_install_permissions_body"><![CDATA[Please go to Settings and grant <1>Aptoide Games</1> permissions to install apps!]]></string>
   <!-- Out of Space -->
   <string name="out_of_space_title">Geen opslagruimte</string>
   <string name="out_of_space_body">Je hebt %s nodig om met de installatie door te gaan.</string>
@@ -135,8 +135,11 @@
   <string name="appview_info_permissions_title" comment="permissions">Toestemmingen</string>
   <string name="download_percentage_body" comment="1_s_of_2_s">%1$s%% van %2$s</string>
   <string name="error_short_title" comment="oops_an_error_occurred">Oeps, er is een fout opgetreden</string>
-  <string name="purchase_done_existing_bonus_body">Je hebt nu %s aan bonus. Download de AppCoins Wallet om je bonus bij je volgende aankoop te gebruiken.</string>
-  <string name="bonus_banner_body" comment="you_ll_get_a_bonus_in_all_games_identified_wit">Je krijgt een bonus in alle games met %s.</string>
+  <string name="purchase_done_bonus_title">Get a %s bonus!</string>
+  <string name="purchase_done_bonus_body">Download the AppCoins Wallet to get this bonus and use it in your next purchase.</string>
+  <string name="purchase_done_bonus_wallet_installed_title">AppCoins Wallet installed!</string>
+  <string name="purchase_done_bonus_wallet_installed_body">Open it to find your bonus.</string>
+  <string name="bonus_banner_body">Je krijgt een bonus in alle games met %s.</string>
   <string name="bonus_banner_title" comment="up_to_s_bonus">Tot %s%% bonus</string>
   <string name="settings_payments_title" comment="contact_support_team">Neem contact op met support</string>
   <string name="settings_contact_support_body" comment="billing_terms_of_use">Factureringsvoorwaarden</string>
@@ -157,7 +160,7 @@
   <string name="iap_card_expiry" comment="expiry_date">Vervaldatum</string>
   <string name="iap_card_cvc" comment="cvc_cvv">CVC/CVV</string>
   <string name="iab_change_card_button" comment="change_card">Kaart wijzigen</string>
-  <string name="done_title" comment="done">Gelukt!</string>
+  <string name="done_title">Gelukt!</string>
   <string name="purchase_making_purchase_title" comment="making_purchase">Aankoop verwerken...</string>
   <string name="manage_cards_error_details" comment="are_you_sure_your_card_details_are_correct_ple">Weet je zeker dat je kaartgegevens juist zijn? Probeer het opnieuw!</string>
   <string name="log_out_button" comment="log_out">Uitloggen</string>
@@ -187,11 +190,23 @@
   <string name="purchase_error_in_progress_title">Je verzoek is al verwerkt of is in behandeling.</string>
   <string name="purchase_card_error_CVV_title">Onjuiste CVV/CVC</string>
   <string name="purchase_error_expired_card_title">Het lijkt erop dat je kaart is verlopen.</string>
-  <string name="iap_already_processing_title">It seems this purchase is already being processed.</string>
-  <string name="iap_already_processing_body">This purchase may take a while, so, please hold on until completed or contact our Support Team.</string>
+  <string name="iap_already_processing_title">Het lijkt erop dat deze aankoop al wordt verwerkt.</string>
+  <string name="iap_already_processing_body">Het kan even duren om deze aankoop te verwerken. Je kunt wachten tot de aankoop is voltooid of contact met ons ondersteuningsteam opnemen.</string>
   <!-- Bonus Page -->
-  <string name="bonus_page_title_1">A Bonus on Every Purchase</string>
-  <string name="bonus_page_body_1">Look for the games identified with %1$s, install the AppCoins Wallet and get up to %2$s%% bonus in all purchases. You can then use this bonus to make your next purchases in your favorite games!</string>
-  <string name="bonus_page_title_2">Want More?</string>
-  <string name="bonus_page_body_2">You can get an extra %s%% bonus by using an Aptoide Games exclusive promo code in specific games. Stay tuned and you\'ll be notified!</string>
+  <string name="bonus_page_title_1">Een bonus bij elke aankoop</string>
+  <string name="bonus_page_body_1">Zoek naar games met %1$s, installeer de AppCoins Wallet en krijg tot %2$s%% bonus bij alle aankopen. Daarna kun je deze bonus voor je volgende aankopen in je favoriete games gebruiken!</string>
+  <string name="bonus_page_title_2">Nog meer voordeel?</string>
+  <string name="bonus_page_body_2">Je kunt %s%% extra bonus krijgen door een exclusieve Aptoide Games-actiecode te gebruiken. We sturen je een melding om je op de hoogte te houden.</string>
+  <!-- Promo Code -->
+  <string name="promo_code_install_wallet_banner_title">Up to %s%% Bonus in Every Purchase</string>
+  <string name="promo_code_install_wallet_banner_body">Use the AppCoins Wallet to make your in-app purchases and get a reward.</string>
+  <string name="promo_code_extra_title">Want More? Get %s%% Extra Bonus!</string>
+  <string name="promo_code_use_button">Use code</string>
+  <string name="promo_code_install_wallet_disclaimer">Install the AppCoins Wallet first.</string>
+  <string name="promo_code_notification_title">Redeem Your Promo Code</string>
+  <string name="promo_code_notification_body">Use your promo code to get extra bonuses in your favorite game.</string>
+  <string name="promo_code_notification_without_wallet_title">%s%% Extra Bonus!</string>
+  <string name="promo_code_notification_without_wallet_body">Get the AppCoins Wallet and use your promo code to get extra bonuses in all purchases.</string>
+  <string name="promo_code_share_title">You\'ve got a promo code!</string>
+  <string name="promo_code_share_body">Use this promo code to get extra bonuses in your favorite game.</string>
 </resources>
