--- a/app-games/src/main/res/values/strings.xml
+++ b/app-games/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
   <string name="games">Games</string>
   <string name="categories">Categories</string>
   <string name="search">Search</string>
+  <string name="chatbot">Chatbot</string>
   <!-- Settings -->
   <string name="overflow_menu_settings">Settings</string>
   <string name="overflow_menu_terms_conditions">Terms &amp; Conditions</string>
